--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+//    implementation 'com.github.HCan53.HCan:http:1.0.1'
+//    implementation 'com.github.HCan53.HCan:utils:1.0.1'
 
 }
