--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -29,10 +29,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(path: ':utils')
     implementation project(path: ':http')
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-//    implementation 'com.github.HCan53.HCan:http:1.0.1'
-//    implementation 'com.github.HCan53.HCan:utils:1.0.1'
+//    implementation 'com.github.HCan53.HCan:http:1.0.0'
+//    implementation 'com.github.HCan53.HCan:utils:1.0.0'
 
 }
