--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(path: ':utils')
     implementation project(path: ':http')
+//    implementation 'com.github.HCan53.HCan:1.0.0'
 //    implementation 'com.github.HCan53.HCan:http:1.0.0'
 //    implementation 'com.github.HCan53.HCan:utils:1.0.0'
 
