--- a/views/build.gradle
+++ b/views/build.gradle
@@ -31,11 +31,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     //butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
     //滚轮控件
     implementation 'com.contrarywind:wheelview:4.1.0'
 }
