--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -21,16 +22,23 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation project(path: ':utils')
     implementation project(path: ':http')
     implementation project(path: ':views')
     implementation project(path: ':permissions')
+    implementation project(path: ':record')
 //    implementation 'com.github.HCan53.HCan:1.0.2'
 //    implementation 'com.github.HCan53.HCan:http:1.0.2'
 //    implementation 'com.github.HCan53.HCan:utils:1.0.2'
