--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,38 +8,48 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" /><!--JobIntentService使用权限-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 8.0 必要-->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+    <uses-sdk tools:overrideLibrary="com.phcx.businessmodule" />
     <application
-        android:name="com.hcan53.android.application.HCanApplication"
+        android:name=".application.HCanApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".component.splash.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="hcan"
+                    android:pathPrefix="/openapp"
+                    android:scheme="hcscheme" />
+            </intent-filter>
         </activity>
 
-        <activity android:name="com.hcan53.android.component.download.activity.DownLoadActivity">
-        </activity>
 
         <service
-            android:name="com.hcan53.android.component.download.DownLoadService"
+            android:name=".component.download.DownLoadService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:process="com.hanweb.android.product.download"></service>
 
         <provider
-            android:name="com.hcan53.android.component.download.InstallApkProvider"
+            android:name=".component.download.InstallApkProvider"
             android:authorities="com.hcan53.android.component.download.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
