--- a/http/build.gradle
+++ b/http/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     api 'com.squareup.retrofit2:converter-scalars:2.9.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    //glide
+    api 'com.github.bumptech.glide:glide:4.7.1'
 }
