--- a/views/build.gradle
+++ b/views/build.gradle
@@ -25,6 +25,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -37,5 +43,6 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     //滚轮控件
-    implementation 'com.contrarywind:wheelview:4.1.0'
+//    implementation 'com.contrarywind:wheelview:4.1.0'
+    implementation(name: 'wheelview', ext: 'aar')
 }
