--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
             android:name=".component.download.DownLoadService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:process="com.hanweb.android.download"></service>
+            android:process="com.hcan.android.download"></service>
         <provider
             android:name=".component.download.InstallApkProvider"
             android:authorities="com.hcan53.android.product.fileprovider"
