--- a/draft/src/main/AndroidManifest.xml
+++ b/draft/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity
             android:name=".ThanDraftActivity"
-            android:theme="@style/ThanDraft"></activity>
+            android:theme="@style/ThanDraft"
+            android:exported="true"></activity>
     </application>
 </manifest>
