--- a/http/build.gradle
+++ b/http/build.gradle
@@ -2,11 +2,11 @@ plugins {
     id 'com.android.library'
 }
 android {
-    compileSdkVersion 31
+    compileSdk 30
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,6 +23,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
